--- a/Invoke-LLM/frontend/index.html
+++ b/Invoke-LLM/frontend/index.html
@@ -7,13 +7,11 @@
     <link href="./output.css" rel="stylesheet" />
   </head>
   <body class="bg-neutral-900 text-white/90 overflow-x-hidden">
-    <div class="container mx-auto max-w-3xl pb-44">
+    <div class="container mx-auto max-w-3xl pb-44 px-2" id="chat-container">
       <!-- User meesage -->
-      <div class="my-6 bg-neutral-800 rounded-3xl p-6 max-w-fit ml-auto">
-        Hii, How are you?
-      </div>
+
       <!-- model response -->
-      <div class="max-w-fit">Hello, How can i help you?</div>
+      <!-- <div class="max-w-fit">Hello, How can i help you?</div> -->
       <!-- User text field -->
       <div
         class="fixed inset-x-0 bottom-0 flex justify-center items-center bg-neutral-900"
@@ -22,10 +20,12 @@
           <textarea
             class="resize-none p-3 outline-0 w-full"
             rows="2"
+            id="input"
           ></textarea>
           <div class="flex justify-end items-center">
             <button
               class="bg-white text-black px-4 py-1 rounded-full hover:bg-gray-300 cursor-pointer"
+              id="ask"
             >
               Ask
             </button>
